# ULX

./: API_REFERENCE.md  ARCHITECTURE.md  DOCUMENTATION.md  EXPANSION_PLAN.md  EXTENDING_ULX.md  HOLOGRAPHIC_TRINITY.md  INSTALL.sh  KERNEL_BINARY_MAPPING.md  KERNEL_INTEGRATION.md  KERNEL_SOURCE_ANALYSIS.md  LINUX_UNIVERSAL.md  MANIFESTO_UNIVERSAL.md  MD  MEGA_SCALE_ECOSYSTEM.md  Makefile  PUSH_INSTRUCTIONS.md  QUANTUM_GUIDE.md  QUICKSTART.md  README.md  ULX_MELHORIAS_COMPLETAS.md  ULX_SYNTAX.md  ULX_V2_SUMMARY.md  UNINSTALL.sh  clx_compiler_v4.py  examples_showcase.ulx  install.sh  monitor_ulx_puro  stdlib_extended.ulx  system-monitor  system_monitor_gui  ulx_gui_window  ulx_integrated_setup.sh  ulx_universal_bridge.sh  ulxc_bootstrap.asm  zi1TeD9x
ULX Flux/: MANUAL_INSTALACAO.md  ULXFlux.sh  install.sh
assets/: ulx-apk.xml  ulx-exe.xml
docs/: DRAGON_ENGINE.md  PACKAGING.md
examples/: calculadora  calculadora.c  calculadora.ulx  fatorial.ulx  game_performance.c  game_performance.ulx  hardware_accel.ulx  hello.ulx  hello_world  hello_world.c  hello_world.ulx  jogo_adivinhacao.ulx  loops  loops.c  loops.ulx  meu_jogo.ulx  monitor.ulx  monitor_bin.c  monitor_ulx_puro.ulx  ola_mundo.ulx  quantum_grover.ulx  ulx_studio.ulx  (+2 more)
ulx-interceptor/: CMakeLists.txt  README.md  compile.sh  ulx_bridge.cpp  ulx_build_and_run.sh  ulx_driver_optimizer.sh
ulx-interceptor/cpu/: ulx_core.cpp  ulx_cpu_interceptor.c
ulx-interceptor/docs/: arquitetura_ulx_core.md  ulx_integrated_architecture.md
ulx-interceptor/gpu/: ulx_gpu_interceptor.c  ulx_vulkan_layer.cpp  ulx_vulkan_layer.json
(+66 files in other folders)
